feat: add AFK-aware sleep vote eligibility